src/scss/style.scss
@import "defaults";
@import "mixins";

.main {
  background: linear-gradient(rgb(151, 151, 255), rgb(211, 211, 255));
  min-height: 100vh;
  overflow-x: hidden;

  // HEADER
  &__header {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 15vh;
    background: rgba(255, 255, 255, .5);
    padding: .5rem;

    // new-btn
    &__new-btn {
      position: relative;
      display: flex;
      align-items: center;
      background: green;
      border: none;
      padding: .5rem 1rem;
      cursor: pointer;
      border-radius: 1rem;
      overflow: hidden;

      &::before {
        content: "";
        position: absolute;
        width: 100%;
        height: 100%;
        background: rgb(0, 187, 0);
        left: 0;
        top: 0;
        border-radius: 1rem;
        transform: translate(-15rem) rotate(135deg);
        transition: transform .15s ease-out;
      }

      &:hover::before {
        transform: translate(0) rotate(135deg);
      }

      &__icon {
        position: relative;
        z-index: 1;
        display: block;
        font-size: 2rem;
        margin-right: .4rem;
      }

      &__text {
        position: relative;
        z-index: 1;
        display: block;
        font-size: 2rem;
        color: #fff;
        text-shadow: 1px 1px 3px #000;
      }
    }

    // tools
    &__tools {
      position: absolute;
      display: flex;
      justify-content: space-around;
      top: 50%;
      left: 100%;
      transform: translate(-100%, -50%);
      width: 5rem;

      // light-btn
      &__light-btn {
        background: none;
        border: 0;
        cursor: pointer;

        &__icon {
          font-size: 2.5rem;
        }
      }

      @include mq(768px) {

        &__view-btn {
          display: inline-block;
        }
      }
    }
  }

  // NOTES CONTAINER
  &__notes-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 100vw;
    padding: .5rem;

    &__note.locked &__note {
      &__body {
        &__textarea {
          display: none;
        }

        &__text {
          display: block;
        }
      }
    }

    &__note {
      display: flex;
      flex-direction: column;
      background: rgb(199, 160, 160);
      width: 25rem;
      height: 30rem;
      border-radius: .5rem;
      margin: 1rem;
      
      &__header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background: green;
        border-top-right-radius: .5rem;
        border-top-left-radius: .5rem;
        padding: .5rem;
        height: 4rem;

        &__title {
          letter-spacing: .1rem;
          flex: 1;
        }

        &__tools {
          flex-basis: 7rem;
          display: flex;
          justify-content: space-around;

          &__btn {
            display: flex;
            justify-content: center;
            align-items: center;
            height: 2rem;
            background: transparent;
            border: 0;
            pointer-events: none;
            
            &:last-of-type {
              transform: translateY(3px);
            }
            
            &__icon {
              pointer-events: all;
              cursor: pointer;
              display: block;
              font-size: 2rem;
            }
          }
        }
      }

      &__body {
        flex: 1;
        padding: .5rem;

        &__textarea {
          font-size: 2rem;
          font-family: arial;
          appearance: none;
          display: block;
          border: 0;
          padding: .5rem;
          width: 100%;
          height: 100%;
          resize: none;
          outline: none;
          border-bottom-left-radius: .5rem;
          border-bottom-right-radius: .5rem;
          overflow: auto;
        }

        &__text {
          font-size: 2rem;
          display: none;
          padding: .5rem;
          background: rgb(226, 226, 226);
          width: 100%;
          height: 100%;
          border-bottom-left-radius: .5rem;
          border-bottom-right-radius: .5rem;
        }
      }
    }
  }
}

